<resources>
    <string name="app_name">MyMovies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Film</string>
    <string name="tab_text_2">Series</string>
    <string name="tab_text_3">My List</string>
    <string name="movie_fragment">ini movie fragment</string>
    <string name="mylist_fragment">ini mylist fragment</string>
    <string name="tvseries_fragment">ini tvseries fragment</string>
    <string name="movie_icon">Movie Icon</string>
    <string name="movies">Movies</string>
    <string name="title">Title</string>
    <string name="genre">genre</string>
    <string name="duration">duration</string>
    <string name="rating_number">5.0</string>
    <string name="episode">E12</string>
    <string name="episode_number">12</string>
    <string name="poster">Poster</string>
    <string name="Synopsis">Synopsis</string>
    <string name="description">lorem ipsum</string>
    <string name="purchase">Purchase</string>
    <string name="icon_back">Icon back</string>
    <string name="icon_bookmark">icon bookmark</string>
    <string name="logo">logo</string>
    <string name="empty_state_title">Your list is empty</string>
    <string name="empty_state_desc">Please bookmark some movies</string>
    <string name="release_date">Release Date</string>
    <string name="vote">Vote</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="top_rated_series">Top Rated Series</string>
    <string name="popular_series">Popular Series</string>
    <string name="backdrop">backdrop</string>
    <string name="tag_line">TagLine</string>
    <string name="language">language</string>
    <string name="introduction">Introduction</string>
    <string name="buy_now">Buy now</string>
    <string name="collect">Collect</string>
    <string name="icon_popularity">icon_popularity</string>
    <string name="popularity">Popularity</string>
    <string name="season">S2</string>
    <string name="favorite_film">Favorite Film</string>
    <string name="favorite_series">Favorite Series</string>
</resources>