<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FAFAFA"
    tools:context=".ui.detail.DetailSeriesActivity">

    <ImageView
        android:id="@+id/icon_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_simple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/icon_back" />

    <ImageView
        android:id="@+id/icon_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_bookmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/icon_bookmark" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/img_poster_series"
        android:layout_width="80dp"
        android:layout_height="110dp"
        android:layout_marginTop="24dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        app:riv_corner_radius="12dp"
        android:src="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_back" />

    <TextView
        android:id="@+id/tv_item_title_series"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/prompt_bold"
        android:textSize="14sp"
        android:textColor="#4A4A4A"
        tools:text="@string/title"
        app:layout_constraintStart_toEndOf="@id/img_poster_series"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_poster_series" />

    <RatingBar
        android:id="@+id/rating_bar_series"
        android:theme="@style/RatingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="10dp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:transformPivotX="0dp"
        android:transformPivotY="0dp"
        android:isIndicator="true"
        android:numStars="5"
        app:layout_constraintStart_toEndOf="@id/img_poster_series"
        app:layout_constraintTop_toBottomOf="@id/tv_item_title_series"
        app:layout_constraintBottom_toTopOf="@id/tv_item_genre_series"/>

    <TextView
        android:id="@+id/tv_item_rating_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/prompt_regular"
        android:textColor="#6B6B6B"
        android:textSize="12sp"
        tools:text="@string/rating_number"
        app:layout_constraintStart_toEndOf="@id/rating_bar_series"
        app:layout_constraintTop_toBottomOf="@id/tv_item_title_series"
        app:layout_constraintBottom_toTopOf="@id/tv_item_genre_series"/>

    <TextView
        android:id="@+id/tv_item_genre_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/prompt_regular"
        android:textColor="#6B6B6B"
        android:textSize="12sp"
        tools:text="@string/genre"
        app:layout_constraintStart_toEndOf="@id/img_poster_series"
        app:layout_constraintTop_toBottomOf="@id/rating_bar_series"
        app:layout_constraintBottom_toTopOf="@id/tv_item_episode"/>

    <TextView
        android:id="@+id/tv_item_episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/prompt_regular"
        android:textColor="#6B6B6B"
        android:textSize="12sp"
        android:text="@string/episode"
        app:layout_constraintStart_toEndOf="@id/img_poster_series"
        app:layout_constraintBottom_toBottomOf="@id/img_poster_series"/>

    <TextView
        android:id="@+id/tv_item_episode_number_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/prompt_regular"
        android:textColor="#6B6B6B"
        android:textSize="12sp"
        tools:text="@string/episode_number"
        app:layout_constraintStart_toEndOf="@id/tv_item_episode"
        app:layout_constraintBottom_toBottomOf="@id/img_poster_series"/>

    <TextView
        android:id="@+id/tv_item_synopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/prompt_bold"
        android:textColor="#4A4A4A"
        android:textSize="14sp"
        android:text="@string/Synopsis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_poster_series" />

    <TextView
        android:id="@+id/tv_item_description_series"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/prompt_regular"
        android:textColor="#6B6B6B"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_synopsis"
        tools:text="@string/description" />

    <Button
        android:id="@+id/btn_purchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#2966DB"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/prompt_medium"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/purchase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>